force-app/main/default/objects/Product2/fields/Accounting_Bin__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bin__c</fullName>
    <label>Accounting Bin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Implementation Revenue</fullName>
            </value>
            <value>
                <fullName>Record Migrator</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>