force-app/main/default/objects/Product2/fields/Accounting_Bin_Quantity_Count__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bin_Quantity_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if items listed here should count toward the quantity for the accounting bin. For example ARM license count toward the Subscriptions count, but other Subscriptions products do not.</description>
    <inlineHelpText>Check this box if items listed here should count toward the quantity for the accounting bin. For example ARM license count toward the Subscriptions count, but other Subscriptions products do not.</inlineHelpText>
    <label>Accounting Bin Quantity Count</label>
    <type>Checkbox</type>
</CustomField>