force-app/main/default/objects/Product2/fields/Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle__c</fullName>
    <label>Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>End-of-Life</fullName>
            </value>
            <value>
                <fullName>End-of-Sale</fullName>
            </value>
            <value>
                <fullName>General-Availability</fullName>
            </value>
            <value>
                <fullName>Limited-Availability</fullName>
            </value>
            <value>
                <fullName>Market-Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>