force-app/main/default/objects/Product2/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <description>Link to statement of work. Full list at https://www.autorabit.com/company-sow/</description>
    <inlineHelpText>Link to standard SOW if there is one. Full List at https://www.autorabit.com/company-sow/</inlineHelpText>
    <label>SOW</label>
    <type>Url</type>
</CustomField>